--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "lucide-react": "^0.294.0",
     "@supabase/supabase-js": "^2.39.0",
     "date-fns": "^2.30.0",
-    "clsx": "^2.0.0"
+    "clsx": "^2.0.0",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "@types/leaflet": "^1.9.8"
   }
 } 
