--- a/package.json
+++ b/package.json
@@ -9,26 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@heroui/react": "^2.8.1",
+    "@supabase/supabase-js": "^2.39.0",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "typescript": "^5.3.3",
-    "tailwindcss": "^3.3.6",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "lucide-react": "^0.294.0",
-    "@supabase/supabase-js": "^2.39.0",
-    "date-fns": "^2.30.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^12.23.6",
     "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1"
+    "lucide-react": "^0.294.0",
+    "next": "14.0.4",
+    "postcss": "^8.4.32",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
-    "@types/leaflet": "^1.9.8"
+    "eslint-config-next": "14.0.4"
   }
-} 
+}
